responsive.css
#wrapper { min-width: 320px; }

@media only screen and (max-width: 1080px) {
	.content-inner { padding: 20px; }
	.blog-content-wrap { grid-template-columns: repeat(auto-fill,minmax(290px,1fr)); gap: 20px; }
	.blog-single { margin: 0 0 40px 0; }
	
}


/* ------------------------------------------------------------------------- *
 *  Sidebar : 960px > 480px
/* ------------------------------------------------------------------------- */
@media only screen and (min-width: 480px) and (max-width: 1023px) {
	
	/* s1 general */
	.s1 { width: 100%; }
	.s1 .sidebar-content { margin: 0 auto; max-width: 420px; }
	
	.col-2cr .s1 { margin-left: 0; box-shadow: none; }
	.col-2cr .main-inner { padding-left: 0; }
	
	.col-2cl .s1 { margin-right: 0; box-shadow: none; }
	.col-2cl .main-inner { padding-right: 0; }
	
	.main-inner { display: block; }

	.entry-header .entry-title { font-size: 42px; }
	.page-title .notebox { font-size: 16px; }
	
}


/* ------------------------------------------------------------------------- *
 *  Mobile (Mid Res) : 719px > 0px (480px & 320px)
/* ------------------------------------------------------------------------- */
@media only screen and (max-width: 719px) {
	
	/* layout */
	#wrapper-outer { padding: 0 10px; }
	#wrapper { overflow: hidden; margin-top: 0; padding-left: 0; }
	.main-inner { display: block; }
	.sidebar .widget { margin-top: 0; border-width: 1px 0 0 0; }
	
	.container { padding: 0; }
	.grid { width: 100%; margin: 0 0 10px; }
	.sidebar .widget { padding-left: 30px; padding-right: 30px; }
	.pagination { margin-left: 20px; margin-right: 20px; }
	
	/* hide */
	.site-description,
	.image-caption { display: none; }
	
	/* base */
	.pad { padding: 20px 20px 10px; }
	.entry { font-size: 15px; }
	
	/* text */
	.entry h1 { font-size: 30px; letter-spacing: -0.7px; }
	.entry h2 { font-size: 26px; letter-spacing: -0.5px; }
	.entry h3 { font-size: 24px; letter-spacing: -0.3px; }
	.entry h4 { font-size: 22px; letter-spacing: -0.3px; }
	.entry h5 { font-size: 18px; }
	.entry h6 { font-size: 16px; text-transform: uppercase; }

	/* header */
	#header,
	#header .pad { padding: 0; }
	#header { border-radius: 20px 20px 0 0; }
	.site-title { padding: 10px 0; margin: 0; width: 100%; float: none; line-height: 50px; border-bottom: 1px solid #eee; }
	.site-title a { text-align: center; }
	
	.toggle-search { background: none; border: 0; width: auto; position: absolute; left: 10px; top: -44px; z-index: 103; color: #333; margin: 0; padding: 8px 12px; }
	.toggle-search:focus { box-shadow: none; }
	.toggle-search:hover,
	.toggle-search.active { background: transparent; color: #333; padding-top: 10px; padding-bottom: 10px; }
	.search-expand { top: -1px; left: 0; width: 100%; padding: 0; }
	.search-expand-inner { padding: 0; width: 100%; }
	.search-expand .themeform.searchform div input { border-radius: 0; padding: 12px 22px 12px 60px; }
	.s2 .themeform.searchform div:after { top: 12px; left: 26px; }
	.nav-menu.mobile > div > ul > li:last-child { margin-bottom: 42px; }
	.toggle-search .svg-icon,
	.toggle-search.active #svg-close,
	.toggle-search:focus #svg-search,
	.toggle-search:focus #svg-close { fill: #333; }
	
	#nav-header.nav-container { margin-top: 0; }
	
	.s2 { box-shadow: none; position: relative; width: 100%; text-align: center; top: 0!important; }
	.s2 .social-links li:before { display: none; }
	.s2 .social-links { margin-top: 0; }
	.s2 .social-links li { width: auto; padding: 0; }
	.s2 .social-links .social-tooltip { font-size: 18px; margin: 0; padding-left: 6px; padding-right: 6px; padding-top: 10px; padding-bottom: 10px; }
	.s2 .social-links .social-tooltip:hover:after,
	.s2 .social-links .social-tooltip:hover:before { display: none; }
	
	/* footer */
	#nav-footer.nav-container { padding: 0; }
	#footer-bottom .pad { padding-top: 50px; padding-bottom: 40px; }
	#footer-bottom .one-half.last { margin-bottom: 0; }
	#footer-bottom { text-align: center; }
	#footer-bottom #footer-logo { margin-left: auto; margin-right: auto; }
	#footer-bottom .social-links { float: none; }
	#footer-bottom .social-links li { margin-left: 4px; margin-right: 4px; }
	
	/* comments */
	.comment-tabs { font-size: 14px; }
	.commentlist li { font-size: 13px; }
	.commentlist li ul li { padding-left: 10px; }
	
	/* page */
	.page-title {  }
	.notebox { font-size: 15px; }
	
	/* blog */
	.slick-posts { margin-top: 0; }
	.entry-header { margin-bottom: 20px; }
	.entry-header .entry-title { font-size: 28px; margin-bottom: 10px; }
	.entry-header .entry-meta { font-size: 15px; }
	
	.front-widget-col { width: 100%; }
	.front-widget-inner { margin: 0; }

	.format-gallery .post-format .flexslider .slides img { max-height: 340px; }
	
	/* single */
	.featured-title,
	.blog-single-title,
	.blog-single-format h1 { font-size: 32px; }
	
	.sidebar .post-nav li a { border-bottom: 0; }
	
	.sharrre-footer .sharrre .share span { display: none; }

	.post-nav li { width: 100%; -webkit-box-shadow: none!important; box-shadow: none!important; }
	.post-nav li a { min-height: 0; }
	.post-nav li.previous { border-top: 1px solid #eee; }
	
	.related-posts li { width: 50%; }
	.related-posts li:nth-child(2) article { border-right-color: transparent; } 
	.related-posts li:nth-child(3) { display: none; }
	
	.author-bio .bio-desc { font-size: 14px; }
	
}

/* ------------------------------------------------------------------------- *
 *  Mobile (Low Res) : 479px > 0 (320px)
/* ------------------------------------------------------------------------- */
@media only screen and (max-width: 479px) {
	
	/* layout */
	#wrapper-outer { padding: 0; }
	.content,
	.sidebar.s1 { width: 100%; float: none; margin-right: 0!important; margin-left: 0!important; }
	.sidebar.s1 { width: 100%; display: block; float: left; margin-top: 20px; }
	.main,
	.main-inner { padding: 0!important;  }
	.content { padding: 0; }
	.content-inner { padding: 20px; }
	.sidebar .widget { margin-top: 0; border-radius: 0!important; }
	
	/* hide */
	.mobile-sidebar-hide-s1 .s1,
	.mobile-sidebar-hide .sidebar,
	.gallery-caption { display: none; }
	
	/* base */
	.page-title { padding: 0; }
	.page-title h1, 
	.page-title h2,
	.page-title h3, 
	.page-title h4 { font-size: 18px; }
	.page-title .notebox { font-size: 15px; }
	
	/* header */
	.site-title { font-size: 32px; }
	
	/* blog */
	.featured-item-wrap,
	.blog-card-wrap,
	.blog-single { padding: 4px; }
	.slick-featured-nav { margin-top: -50px; }
	.featured-item,
	.blog-single-inner { height: 320px; }
	.featured-content,
	.blog-single-inner-inner,
	.blog-single-format-title { padding: 30px; }
	.featured-title,
	.blog-single-title,
	.blog-single-format h1 { font-size: 22px; letter-spacing: 0; }
	.featured-item-bottom .blog-card-meta { float: none; }
	.featured-item-bottom .blog-card-category { float: left; }
	
	.blog-content-wrap { grid-template-columns: repeat(auto-fill,minmax(280px,1fr)); }
	
	.blog-single { margin: 0 0 30px 0; }
	.blog-single-meta,
	.blog-single-category { float: none; }
	.blog-single-meta li { border: 0; }
	.blog-single-meta li.blog-single-byline { display: none; }
	
	.entry > .alignfull { margin-left: -20px; margin-right: -20px; }
	
	.entry-header,
	.entry-content,
	.entry-footer { padding-right: 10px; padding-left: 10px; }
	
	.sharrre-footer .sharrre .share span,
	.sharrre-footer .sharrre .count { display: none; } 
	
}

